--- a/main.tex
+++ b/main.tex
@@ -193,6 +193,35 @@
     \end{center}
     \addcontentsline{toc}{section}{{\bf LỜI MỞ ĐẦU}\rm}
 
+    Xích Markov là một mô hình toán học cơ bản được sử dụng để miêu tả các hệ thống thay đổi theo thời gian.
+    Xích Markov có ứng dụng rất rộng rãi trong nhiều lĩnh vực khác nhau như vật lý, hóa học, kinh tế và khoa học máy tính.
+    Xích Markov là một quá trình ngẫu nhiên đại diện cho một chuỗi các sự kiện mà trong đó xác suất của mỗi sự kiện ở thời điểm tiếp theo nếu đã biết hiện tại thì xác suất các sự kiện ở tương lai độc lập với quá khứ.
+    Mô hình này có rất nhiều các đặc điểm hữu ích như hội tụ thành phân bố dừng và khả năng mô hình hóa các hiện tượng phức tạp.
+
+    Lý thuyết phân nhanh là một nhánh nghiên cứu của lý thuyết xác suất nghiên cứu sự tiến hóa của quần thể theo thời gian.
+    Lý thuyết thường được sử dụng để mô hình hóa sự phân triển của số lượng các cá thể trong một quần thể hoặc sự lây lan của bệnh dịch trong quần thế.
+    Trong lý thuyết phân nhánh, xích Markov được sử dụng để mô tả quá trình chuyển đổi dân số từ thế hệ này sang thế hệ tiếp theo.
+
+    Xích Markov Monte Carlo là một kỹ thuật rất mạnh được dùng để mô phỏng các hệ thống phức tạp.
+    Các thuật toán xích Markov Monte Carlo sử dụng xích Markov để tạo ra một dãy các mẫu từ một phân bố xác suất.
+    Kỹ thuật này được dùng rất nhiều trong các lĩnh vực như vật lý, thống kê và học máy (machine learning).
+
+    Quá trình quyết định Markov là một mô hình mở rộng xích Markov để giải quyết các bài toán đưa ra quyết định mà người ra quyết định phải chọn một hành động sao cho tổng thu nhập phần thưởng tích lũy thu được từ hiện tại đến tương lai dài hạn là lớn nhất
+    Xích Markov ẩn là một loại xích Markov mô hình hóa dãy các quan sát, với mỗi quan sát được tạo ra từ một trạng thái ẩn.
+    Xích Markov ẩn được sử dụng rất nhiều trong xử lý tiếng nói, xử lý ngôn ngữ tự nhiên hay trong các ứng dụng liên quan đến dữ liệu dạng chuỗi.
+
+    Trong tiểu luận này, ta sẽ tìm hiểu lý thuyết của xích Markov, lý thuyết phân nhánh, xích Markov Monte Carlo và xích Markov ẩn và các ứng dụng thông qua các ví dụ.
+    Ta sẽ bắt đầu nói về số bước chuyển tiếp trung bình giữa các trạng thái, sau đó chuyển sang lý thuyết về lý thuyết phân nhánh và cách sử dụng để mô hình hóa sự biến đổi của quần thể.
+    Ta cũng sẽ đề cập một số thuật toán quan trọng của xích Markov Monte Carlo như là thuật toán Metropolis-Hastings và bộ lấy mẫu Gibbs.
+
+    Tiếp đến ta sẽ giới thiệu quá trình quyết định Markov cũng như các khái niệm cơ bản của xích Markov ẩn.
+    Tiểu luận sẽ trình bày một số thuật toán quan trọng của xích Markov ẩn như là thuật toán thuận - nghịch và thuật toán Viterbi.
+    Ta cũng sẽ trình bày về ứng dụng của xích Markov ẩn trong xử lý ngôn ngữ và trình bày sơ lược về trường điều kiện ngẫu nhiên (Conditional Random Fields).
+
+    Tiểu luận mong muốn cung cấp một cái nhìn tổng quan toàn diện về lý thuyết và ứng dụng của xích Markov, lý thuyết phân nhánh, xích Markov Monte Carlo, quá trình quyết định Markov và xích Markov ẩn.
+    Các mô hình này đã được chứng minh là công cụ mạnh mẽ và linh hoạt để mô hình hóa các hệ thống phức tạp và giải quyết các bài toán có dữ liệu chuỗi, đồng thời có nhiều ứng dụng trong các lĩnh vực khác nhau.
+
+
     \newpage
 
     \section{Số bước trung bình chuyển tiếp giữa các trạng thái tạm thời}
