--- a/main.tex
+++ b/main.tex
@@ -218,7 +218,7 @@
     Tiểu luận sẽ trình bày một số thuật toán quan trọng của xích Markov ẩn như là thuật toán thuận - nghịch và thuật toán Viterbi.
     Ta cũng sẽ trình bày về ứng dụng của xích Markov ẩn trong xử lý ngôn ngữ và trình bày sơ lược về trường điều kiện ngẫu nhiên (Conditional Random Fields).
 
-    Tiểu luận mong muốn cung cấp một cái nhìn tổng quan toàn diện về lý thuyết và ứng dụng của xích Markov, lý thuyết phân nhánh, xích Markov Monte Carlo, quá trình quyết định Markov và xích Markov ẩn.
+    Tiểu luận tổng hợp về lý thuyết và ứng dụng của xích Markov, lý thuyết phân nhánh, xích Markov Monte Carlo, quá trình quyết định Markov và xích Markov ẩn.
     Các mô hình này đã được chứng minh là công cụ mạnh mẽ và linh hoạt để mô hình hóa các hệ thống phức tạp và giải quyết các bài toán có dữ liệu chuỗi, đồng thời có nhiều ứng dụng trong các lĩnh vực khác nhau.
 
 
