--- a/ref.bib
+++ b/ref.bib
@@ -12,3 +12,92 @@
   year={2007},
   publisher={prentice hall}
 }
+
+
+@article{van2012reinforcement,
+  title={Reinforcement learning and markov decision processes},
+  author={Van Otterlo, Martijn and Wiering, Marco},
+  journal={Reinforcement learning: State-of-the-art},
+  pages={3--42},
+  year={2012},
+  publisher={Springer}
+}
+
+
+@book{kamath2019deep,
+  title={Deep learning for NLP and speech recognition},
+  author={Kamath, Uday and Liu, John and Whitaker, James},
+  volume={84},
+  year={2019},
+  publisher={Springer}
+}
+
+
+@book{dymarski2011hidden,
+  title={Hidden Markov models: Theory and applications},
+  author={Dymarski, Przemyslaw},
+  year={2011},
+  publisher={BoD--Books on Demand}
+}
+
+
+@incollection{stewart2021introduction,
+  title={Introduction to the numerical solution of Markov chains},
+  author={Stewart, William J},
+  booktitle={Introduction to the Numerical Solution of Markov Chains},
+  year={2021},
+  publisher={Princeton University Press}
+}
+
+
+@book{bharucha1997elements,
+  title={Elements of the Theory of Markov Processes and their Applications},
+  author={Bharucha-Reid, Albert T},
+  year={1997},
+  publisher={Courier Corporation}
+}
+
+
+@book{van2018introduction,
+  title={Introduction to Hidden Semi-Markov Models},
+  author={Van der Hoek, John and Elliott, Robert J},
+  volume={445},
+  year={2018},
+  publisher={Cambridge University Press}
+}
+
+
+@book{sutton2018reinforcement,
+  title={Reinforcement learning: An introduction},
+  author={Sutton, Richard S and Barto, Andrew G},
+  year={2018},
+  publisher={MIT press}
+}
+
+
+@article{sutton2012introduction,
+  title={An introduction to conditional random fields},
+  author={Sutton, Charles and McCallum, Andrew and others},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={4},
+  number={4},
+  pages={267--373},
+  year={2012},
+  publisher={Now Publishers, Inc.}
+}
+
+
+@book{gallager2013stochastic,
+  title={Stochastic processes: theory for applications},
+  author={Gallager, Robert G},
+  year={2013},
+  publisher={Cambridge University Press}
+}
+
+
+@book{meyn2012markov,
+  title={Markov chains and stochastic stability},
+  author={Meyn, Sean P and Tweedie, Richard L},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
